src/objects/Document__c.object
<CustomObject>
    <description>Custom object used as a placeholder to associate files with records. This object has a lookup to Account, and the rest of the relationships managed using a Lightning component.</description>
    <fields>
        <fullName>Acceptance_Type__c</fullName>
        <label>Acceptance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_Item_Title__c</fullName>
        <label>Category Item Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signed Lease Agreement</fullName>
                </value>
                <value>
                    <fullName>Tenant Statement</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Rent Increase Notifications</fullName>
                </value>
                <value>
                    <fullName>Final Settlements</fullName>
                </value>
                <value>
                    <fullName>Collection</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Unit Takeover Form</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Lease Agreement</fullName>
                </value>
                <value>
                    <fullName>Lease Agreement -Special Terms</fullName>
                </value>
                <value>
                    <fullName>PSA with Visa Matrix Ready for Collection</fullName>
                </value>
                <value>
                    <fullName>New Lease -Ready for Collection</fullName>
                </value>
                <value>
                    <fullName>New Lease -Ready for collection-7Reminde</fullName>
                </value>
                <value>
                    <fullName>New Lease -Ready for collection-14Remind</fullName>
                </value>
                <value>
                    <fullName>New Lease -Ready for Colllection-21Remin</fullName>
                </value>
                <value>
                    <fullName>New Lease-Space Leased Notification</fullName>
                </value>
                <value>
                    <fullName>Printed Lease Agreement</fullName>
                </value>
                <value>
                    <fullName>Reminder Letter 1</fullName>
                </value>
                <value>
                    <fullName>Reminder Letter 2</fullName>
                </value>
                <value>
                    <fullName>Reminder Letter 3</fullName>
                </value>
                <value>
                    <fullName>Lease Doc</fullName>
                </value>
                <value>
                    <fullName>Lease Amendment</fullName>
                </value>
                <value>
                    <fullName>Audited Sales Report</fullName>
                </value>
                <value>
                    <fullName>First Inspection Report</fullName>
                </value>
                <value>
                    <fullName>Second Inspection Report</fullName>
                </value>
                <value>
                    <fullName>FILE NOTE</fullName>
                </value>
                <value>
                    <fullName>Sublease Lease Agreement</fullName>
                </value>
                <value>
                    <fullName>Second Amendment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id for the contact record which is associated to the document</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DDA_Document_Id__c</fullName>
        <description>This field is used to store dda document id as external id.</description>
        <externalId>true</externalId>
        <label>DDA Document Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>File_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>File Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Error_Message__c</fullName>
        <label>Integration Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Synced</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_File_Id__c</fullName>
        <label>Linked File Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <label>ParentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physically_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physically Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physically_Received_at__c</fullName>
        <label>Physically Received at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Public_link__c</fullName>
        <label>Public link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified_at__c</fullName>
        <label>Verified at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <recordTypes>
        <fullName>External_Document</fullName>
        <active>true</active>
        <label>External Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Document</fullName>
        <active>true</active>
        <label>Internal Document</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>